Добавлен интерфейс менеджера, добавлено тестирование для InMemoryTaskManager(бывший ManagerOfTasks), добавленно сохранение истории просмотра десяти последних тасков